<resources>
    <string name="app_name">ExcelChart</string>
    <string name="wechat_id">wechat</string>

    <string name="home">首页</string>
    <string name="recently">最近</string>
    <string name="collect">收藏</string>

    <string name="loading">加载中</string>
    <string name="error">发生错误</string>
    <string name="error_network">网络错误</string>
    <string name="error_login">用户请先登录，或者用户登录已过期需要重新登录</string>
    <string name="no_data">暂无内容</string>
    <string name="no_collect_data">没有收藏内容</string>
    <string name="refresh">下拉刷新</string>

    <string name="add_line_bottom">下方插入一行</string>
    <string name="add_line_right">右边插入一列</string>
    <string name="merge_cell">合并单元格</string>
    <string name="hint_unlock_cell">请先解开合并的单元格</string>
    <string name="add_line_left">左边插入一列</string>
    <string name="add_line_top">上方插入一行</string>
    <string name="delete_line">删除一行</string>
    <string name="delete_column">删除一列</string>

    <string name="addition">加法</string>
    <string name="subtraction">减法</string>
    <string name="multiplication">乘法</string>
    <string name="division">除法</string>
    <string name="average">平均</string>
    <string name="maximum">最大</string>
    <string name="minimum">最小</string>
    <string name="left">左边</string>
    <string name="right">右边</string>
    <string name="top">上边</string>
    <string name="bottom">下边</string>
    <string name="up_left">左上</string>
    <string name="all">所有</string>
    <string name="integer">取整</string>
    <string name="one">1位</string>
    <string name="two">2位</string>
    <string name="three">3位</string>
    <string name="four">4位</string>
    <string name="five">5位</string>
    <string name="six">6位</string>
    <string name="no_partition">不隔断</string>
    <string name="partition">隔断</string>
    <string name="apply">应用</string>

    <string name="bulk_insert">批量插入</string>
    <string name="find_and_replace">查找替换</string>
    <string name="unified_wide_high">统一宽高</string>
    <string name="unified_wide_high_hint">统一所有宽高</string>
    <string name="super_set">高级设置</string>
    <string name="insert_date">插入当前日期</string>
    <string name="insert_date_hint">插入当前日期，例：2020-12-12</string>
    <string name="insert_time">插入当前时间</string>
    <string name="insert_time_hint">插入当前时间，例：15:12:03</string>
    <string name="how_realize_calculation">如何实现计算？</string>
    <string name="how_create_table">如何制作表格？</string>
    <string name="how_cell_size">如何控制单元格大小？</string>

    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="complete">完成</string>
    <string name="undo">撤销</string>
    <string name="find_content">查找内容：</string>
    <string name="replace">替换为：</string>
    <string name="click_input">点击输入</string>
    <string name="unified">已统一宽高</string>

    <!--mine-->
    <string name="mine">我的</string>
    <string name="account">账号</string>
    <string name="super_user">高级用户</string>
    <string name="video_course">视频教程</string>
    <string name="tip">小技巧</string>
    <string name="recycle_bin">回收站</string>
    <string name="active_sync">主动同步</string>
    <string name="about_us">关于我们</string>
    <string name="privacy_policy">隐私条款</string>
    <string name="feedback">反馈</string>
    <string name="how_to_use_chart">如何玩转图表？</string>
    <string name="vip_forever">永久会员</string>
    <string name="not_available">未开通</string>
    <string name="not_bind">未绑定</string>
    <string name="you_was_vip">你已经开通高级会员~</string>


    <!--account-->
    <string name="change_password">修改密码</string>
    <string name="input_old_pwd">输入旧密码</string>
    <string name="input_new_pwd">输入新密码</string>
    <string name="error_input_old_pwd">旧密码输入错误</string>
    <string name="success_change_pwd">密码修改成功</string>
    <string name="error_change_pwd">密码修改失败</string>

    <string name="bind_email">绑定邮箱</string>
    <string name="email">邮箱</string>
    <string name="input_email">输入邮箱</string>
    <string name="success_change_email">邮箱修改成功</string>
    <string name="error_change_email">邮箱修改失败</string>

    <string name="re_login">重新登录</string>
    <string name="logout">退出登录</string>

    <!--dialog-->
    <string name="operation">操作</string>
    <string name="operation_content">对操作[%1$s]进行操作</string>
    <string name="delete_file">删除该文件</string>
    <string name="copy">复制</string>
    <string name="move">移动到</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_failure">收藏失败</string>
    <string name="rename">重命名</string>
    <string name="rename_success">重命名成功</string>
    <string name="rename_failure">重命名失败</string>
    <string name="designation">名称</string>
    <string name="send_file">发送文件</string>
    <string name="create">创建</string>
    <string name="update">更新</string>
    <string name="hint_logout">确定退出当前账号吗？</string>
    <string name="hint_delete_file">确定删除当前文件吗？</string>
    <string name="success_delete">删除成功</string>
    <string name="failure_delete">删除失败</string>

    <!--login-->
    <string name="login">登录</string>
    <string name="success_login">登录成功</string>
    <string name="error_account_password">账号密码错误</string>
    <string name="error_account">请输入账号</string>
    <string name="error_password">请输入密码</string>
    <string name="phone">手机号码</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="forget_password_content">请发送邮件到xiaochengkejis@foxmail.com 邮件内容必须包含您的账号(手机号码)，如果能够提供更多的信息，比如大概的注册时间，最近一次创建文件的时间等更好~或者联系客服QQ</string>
    <string name="our_email">xiaochengkejis@foxmail.com</string>
    <string name="service_qq">客服QQ 183051883</string>
    <string name="service_email">反馈邮件 xiaochengkejis@foxmail.com</string>
    <string name="our_qq">183051883</string>
    <string name="copy_email_qq">长按文本复制邮箱和QQ</string>
    <string name="copy_email_success">反馈邮件复制成功</string>
    <string name="copy_qq_success">客服QQ复制成功</string>
    <string name="splash_hint">Quickly make table charts</string>

    <!--feedback-->
    <string name="hint_feedback">请填写反馈</string>
    <string name="contact">联系方式</string>
    <string name="send_feedback">发送反馈</string>
    <string name="or">或者</string>
    <string name="click_to_copy">点击可复制</string>
    <string name="success_send">提交成功</string>
</resources>
