<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/qb_px_10"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/ll_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/qb_px_8"
            android:text="@string/addition" />

        <TextView
            android:id="@+id/tv_sub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/qb_px_8"
            android:text="@string/subtraction" />

        <TextView
            android:id="@+id/tv_multiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/qb_px_8"
            android:text="@string/multiplication" />

        <TextView
            android:id="@+id/tv_divide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/qb_px_8"
            android:text="@string/division" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/ll_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ll_1">

        <TextView
            android:id="@+id/tv_average"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/qb_px_12"
            android:paddingEnd="@dimen/qb_px_12"
            android:text="@string/average" />

        <TextView
            android:id="@+id/tv_max"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/qb_px_12"
            android:paddingEnd="@dimen/qb_px_12"
            android:text="@string/maximum" />

        <TextView
            android:id="@+id/tv_min"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/qb_px_12"
            android:paddingEnd="@dimen/qb_px_12"
            android:text="@string/minimum" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qb_px_8"
        android:layout_marginEnd="@dimen/qb_px_10"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/ll_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_1">

        <TextView
            android:id="@+id/tv_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/qb_px_8"
            android:paddingBottom="@dimen/qb_px_8"
            android:text="@string/left" />

        <TextView
            android:id="@+id/tv_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/qb_px_8"
            android:paddingBottom="@dimen/qb_px_8"
            android:text="@string/top" />

        <TextView
            android:id="@+id/tv_bottom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/qb_px_8"
            android:paddingBottom="@dimen/qb_px_8"
            android:text="@string/bottom" />

        <TextView
            android:id="@+id/tv_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/qb_px_8"
            android:paddingBottom="@dimen/qb_px_8"
            android:text="@string/right" />

        <TextView
            android:id="@+id/tv_up_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/qb_px_8"
            android:paddingBottom="@dimen/qb_px_8"
            android:text="@string/up_left" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/ll_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ll_3">

        <TextView
            android:id="@+id/tv_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="@dimen/qb_px_12"
            android:paddingTop="@dimen/qb_px_8"
            android:paddingEnd="@dimen/qb_px_12"
            android:paddingBottom="@dimen/qb_px_8"
            android:text="@string/all" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_integer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qb_px_8"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="@dimen/qb_px_12"
        android:paddingTop="@dimen/qb_px_8"
        android:paddingEnd="@dimen/qb_px_12"
        android:paddingBottom="@dimen/qb_px_8"
        android:text="@string/integer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_3" />

    <LinearLayout
        android:id="@+id/ll_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/qb_px_8"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/tv_integer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_integer"
        app:layout_constraintTop_toTopOf="@id/tv_integer">

        <TextView
            android:id="@+id/tv_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/qb_px_8"
            android:paddingBottom="@dimen/qb_px_8"
            android:text="@string/one" />

        <TextView
            android:id="@+id/tv_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/qb_px_8"
            android:paddingBottom="@dimen/qb_px_8"
            android:text="@string/two" />

        <TextView
            android:id="@+id/tv_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/qb_px_8"
            android:paddingBottom="@dimen/qb_px_8"
            android:text="@string/three" />

        <TextView
            android:id="@+id/tv_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/qb_px_8"
            android:paddingBottom="@dimen/qb_px_8"
            android:text="@string/four" />

        <TextView
            android:id="@+id/tv_five"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/qb_px_8"
            android:paddingBottom="@dimen/qb_px_8"
            android:text="@string/five" />

        <TextView
            android:id="@+id/tv_six"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="@dimen/qb_px_8"
            android:paddingBottom="@dimen/qb_px_8"
            android:text="@string/six" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_no_partition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qb_px_8"
        android:layout_marginEnd="@dimen/qb_px_5"
        android:background="@color/white"
        android:gravity="center"
        android:padding="@dimen/qb_px_8"
        android:text="@string/no_partition"
        app:layout_constraintEnd_toStartOf="@+id/tv_partition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_integer" />

    <TextView
        android:id="@+id/tv_partition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/qb_px_5"
        android:layout_marginTop="@dimen/qb_px_8"
        android:background="@color/white"
        android:gravity="center"
        android:padding="@dimen/qb_px_8"
        android:text="@string/partition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_no_partition"
        app:layout_constraintTop_toBottomOf="@+id/tv_integer" />

    <Button
        android:id="@+id/bt_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qb_px_8"
        android:background="@color/green00D3BD"
        android:gravity="center"
        android:padding="@dimen/qb_px_8"
        android:text="@string/apply"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_no_partition" />

</androidx.constraintlayout.widget.ConstraintLayout>