<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/qb_px_8">

        <com.kang.excelchart.custom.view.SuperItemView
            android:id="@+id/bulk_insert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/qb_px_1"
            app:left_limg="@mipmap/box_plot"
            app:left_text="@string/bulk_insert" />

        <com.kang.excelchart.custom.view.SuperItemView
            android:id="@+id/find_and_replace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/qb_px_1"
            android:padding="@dimen/qb_px_8"
            app:left_limg="@mipmap/file_search"
            app:left_text="@string/find_and_replace" />

        <com.kang.excelchart.custom.view.SuperItemView
            android:id="@+id/unified_wide_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/qb_px_8"
            android:padding="@dimen/qb_px_8"
            app:left_limg="@mipmap/column_width"
            app:left_text="@string/unified_wide_high" />

        <com.kang.excelchart.custom.view.SuperItemView
            android:id="@+id/super_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/qb_px_1"
            android:padding="@dimen/qb_px_8"
            app:left_limg="@mipmap/wrench"
            app:left_text="@string/super_set" />

        <com.kang.excelchart.custom.view.SuperItemView
            android:id="@+id/insert_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/qb_px_8"
            android:padding="@dimen/qb_px_8"
            app:left_limg="@mipmap/calendar_check"
            app:left_text="@string/insert_date" />

        <com.kang.excelchart.custom.view.SuperItemView
            android:id="@+id/insert_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/qb_px_1"
            android:padding="@dimen/qb_px_8"
            app:left_limg="@mipmap/field_time"
            app:left_text="@string/insert_time" />

        <com.kang.excelchart.custom.view.SuperItemView
            android:id="@+id/how_realize_calculation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/qb_px_8"
            android:padding="@dimen/qb_px_8"
            app:left_text="@string/how_realize_calculation" />

        <com.kang.excelchart.custom.view.SuperItemView
            android:id="@+id/how_create_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/qb_px_1"
            android:padding="@dimen/qb_px_8"
            app:left_limg="@mipmap/bar_chart"
            app:left_text="@string/how_create_table" />

        <com.kang.excelchart.custom.view.SuperItemView
            android:id="@+id/how_cell_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/qb_px_1"
            android:padding="@dimen/qb_px_8"
            app:left_limg="@mipmap/merga"
            app:left_text="@string/how_cell_size" />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>