<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operation"
            android:layout_marginTop="@dimen/qb_px_12" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operation_content"
            android:layout_marginTop="@dimen/qb_px_10"
            android:layout_marginStart="@dimen/qb_px_30"
            android:layout_marginEnd="@dimen/qb_px_30"/>

        <View
            style="@style/lineStyle"
            android:layout_marginTop="@dimen/qb_px_18"/>

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_file"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/redF5222D"
            android:paddingTop="@dimen/qb_px_15"
            android:paddingBottom="@dimen/qb_px_15"/>

        <View
            style="@style/lineStyle" />

        <TextView
            android:id="@+id/tv_copy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copy"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/blue1890FF"
            android:paddingTop="@dimen/qb_px_15"
            android:paddingBottom="@dimen/qb_px_15"/>

        <View
            style="@style/lineStyle" />

        <TextView
            android:id="@+id/tv_move"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/move"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/blue1890FF"
            android:paddingTop="@dimen/qb_px_15"
            android:paddingBottom="@dimen/qb_px_15"/>

        <View
            style="@style/lineStyle" />

        <TextView
            android:id="@+id/tv_rename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rename"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/blue1890FF"
            android:paddingTop="@dimen/qb_px_15"
            android:paddingBottom="@dimen/qb_px_15"/>

        <View
            style="@style/lineStyle" />

        <TextView
            android:id="@+id/tv_collect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/collect"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/blue1890FF"
            android:paddingTop="@dimen/qb_px_15"
            android:paddingBottom="@dimen/qb_px_15"/>

        <View
            style="@style/lineStyle" />

        <TextView
            android:id="@+id/tv_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_file"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/blue1890FF"
            android:paddingTop="@dimen/qb_px_15"
            android:paddingBottom="@dimen/qb_px_15"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/blue1890FF"
        android:paddingTop="@dimen/qb_px_15"
        android:paddingBottom="@dimen/qb_px_15"/>

</LinearLayout>